--- a/src/main/resources/static/Templates/linkAttestationId.html
+++ b/src/main/resources/static/Templates/linkAttestationId.html
@@ -132,7 +132,7 @@
                             </ui-select>
                         </td>-->
                         <!-- Сохранить -->
-                        <td class="text-center">
+                        <td class="text-center border-info">
                             <button class="btn btn-md text-white"
                                     ng-class="{'btn-warning': changes[$index],
                                       'btn-info': !changes[$index]}"
