--- a/src/main/resources/static/Templates/session.html
+++ b/src/main/resources/static/Templates/session.html
@@ -1,13 +1,5 @@
 <div ng-show="ur == 'TEACHER'">
 
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="attestation">Список действующих аттестаций</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Список групп</li>
-    </ol>
-
-    <!-- Оставить заявку!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-    <!--Группы       Последние изменения были сделаны (дата)-->
-
     <div class="my-3 pb-3 card col-md-10 mx-auto border-info p-0">
         <form class="simple-form" name="subjectForm">
 
@@ -65,7 +57,7 @@
 
             <div class="ng-hide font-weight-bold text-center p-2 alert-warning" ng-show="!groups.length">
                 <!--На данный момент группы, в которых Вы преподаёте, отсутствуют-->
-                На данный момент ведомости групп отсутствуют
+                На данный момент сессионные ведомости групп отсутствуют
             </div>
 
 
