--- a/src/main/resources/static/Templates/contentAttestation.html
+++ b/src/main/resources/static/Templates/contentAttestation.html
@@ -3,7 +3,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a ui-sref="attestation">Список действующих аттестаций</a></li>
         <li class="breadcrumb-item"><a ui-sref="subject({id: attestationId})">Список групп</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Редактирование ведомости</li>
+        <li class="breadcrumb-item active" aria-current="page">Редактирование аттестационной ведомости</li>
     </ol>
 
     <div class="my-3 pt-5 card col-md-10 mx-auto">
