--- a/src/main/resources/static/Templates/session.html
+++ b/src/main/resources/static/Templates/session.html
@@ -1,14 +1,14 @@
 <div ng-show="ur == 'TEACHER'">
 
     <div class="my-5 pb-3 card col-md-10 mx-auto border-info p-0">
-        <form class="simple-form" name="subjectForm">
+        <form class="simple-form" name="sessionDTOForm">
 
             <div class="font-weight-bold h4 text-center my-4">
                 Группы
             </div>
             <div class="col-lg-2 col-sm-3 mx-auto mb-4">
                 <ui-select ng-model="group.selected"
-                           ng-change="subjectSelectedGroup()"
+                           ng-change="selectedSessionDTOGroup()"
                            ng-disabled="!groupList.length"
                            name="group"
                            class="col-lg-12 p-0"
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-lg-2 col-sm-3 mx-auto mb-4">
                     <ui-select ng-model="groupForHead.selected"
-                               ng-change="subjectSelectedGroupForHead()"
+                               ng-change="selectedSessionDTOGroupForHead()"
                                ng-disabled="!groupForHeadList.length"
                                name="groupForHead"
                                class="col-lg-12 p-0"
